--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -19,7 +19,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Add MsBuild to the path
-      uses: microsoft/set-msbuild@v1.0.3
+      uses: microsoft/setup-msbuild@v1.0.3
       with:
         vs-version: '[17.0]'
         
